--- a/dockerfiles/tiger_web/Dockerfile
+++ b/dockerfiles/tiger_web/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y apache2
 ### Setup user for build execution and application runtime
 ENV APP_ROOT=/var
 
-RUN chmod -R u+x ${APP_ROOT}/bin && \
+RUN chmod -R u+x /usr/sbin && \
     chgrp -R 0 ${APP_ROOT} && \
     chmod -R g=u ${APP_ROOT} /etc/passwd
 
