--- a/dockerfiles/tiger_web/Dockerfile
+++ b/dockerfiles/tiger_web/Dockerfile
@@ -5,16 +5,14 @@ RUN apt-get update && apt-get install -y apache2
 
 ### Setup user for build execution and application runtime
 ENV APP_ROOT=/var
-
+USER root
 RUN chmod -R u+x /usr/sbin && \
     chgrp -R 0 ${APP_ROOT} && \
     chmod -R g=u ${APP_ROOT} /etc/passwd
-
-### Containers should NOT run as root as a good practice
-USER 10001
-WORKDIR ${APP_ROOT}
-
 RUN chgrp -R 0 /var && \
     chmod -R g=u /var
+    
+### Containers should NOT run as root as a good practice
+USER 10001
 
 CMD ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
