--- a/web.yml
+++ b/web.yml
@@ -36,6 +36,17 @@ objects:
       targetPort: 80
     selector:
       name: "${NAME}"
+- kind: "PersistentVolumeClaim"
+  apiVersion: v1
+    metadata:
+      name: "${NAME}"
+    spec:
+      accessModes:
+        - "ReadWriteOnce"
+      resources:
+        requests:
+          storage: "1Gi"
+      volumeName: "pv1"
 - kind: Route
   apiVersion: v1
   metadata:
